 -- On clusters without any PrologFlags options, batch jobs with failed prologs
    nolonger generate an output file.
 -- sreport - print "Top ALL Users" for Top User report when topcount = -1.
 -- Add SLURM_JOB_START_TIME and SLURM_JOB_END_TIME environment variables.
 -- Add SuspendExcStates option to slurm.conf to avoid suspending/powering down
    specific node states.

* Changes in Slurm 22.05.8
==========================
 -- Fix potential deadlock at slurmctld startup when job has invalid qos.
 -- Avoid unnecessary call to clusteracct_storage_g_cluster_tres() when pinging
    dynamic nodes. This avoids significant slowdowns for slurmctld when
    ping_nodes() calls all nodes to re-register.
 -- openapi/dbv0.0.3[6-8] - fix segfault that could arrise from Slurm database
    connnection failing.
 -- Fix regression introduced in 22.05.0rc1 when updating a NodeName=<nodelist>
    with NodeAddr and/or NodeHostname if the specified nodelist wasn't sorted.
 -- openapi/v0.0.38 - change type of nice field for job submissions to integer
    from string.

* Changes in Slurm 22.05.7
==========================
 -- Fix slurmctlds in a federation not recovering a lost connection until a
    slurmctld restart or a federation update.
 -- Fix incorrectly rejecting jobs that request GRES on multiple sockets and
    --gres-flags=enforce-binding.
 -- Fix job core selection with --gres-flags=enforce-binding: this fixes cases
    where enforce-binding was not respected.
 -- openapi/v0.0.38 - set assoc_id resolution failure as a debug log instead of
    an error log.
 -- Fix issues when running in FrontEnd mode.
 -- Fix srun and salloc I/O code to set keepaliveinterval/keepalivetime on
    connections.
 -- Fix overwrite race of cont_id in cgroup/v2 when using task/cgroup with
    proctrack/cray_aries.
 -- Fix node remaining allocated after a reconfig with a completing job that
    has an EpilogSlurmctld instance still running.
 -- openapi/dbv0.0.38 - fix a cast to a wrong type